Etapa 3/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ERROR
    TkElse

Grammar

Rule 0     S' -> program
Rule 1     program -> TkOBlock declarations TkSemicolon instructions TkCBlock
Rule 2     program -> TkOBlock instructions TkCBlock
Rule 3     declarations -> declarations TkSemicolon declaration
Rule 4     declarations -> declaration
Rule 5     declaration -> TkInt idlist
Rule 6     declaration -> TkBool idlist
Rule 7     declaration -> TkFunction TkOBracket TkSoForth TkNum TkCBracket idlist
Rule 8     idlist -> idlist TkComma id
Rule 9     idlist -> id
Rule 10    id -> TkId
Rule 11    expressionlist -> expressionlist TkComma expression
Rule 12    expressionlist -> expression TkComma expression
Rule 13    instructions -> instructions TkSemicolon instruction
Rule 14    instructions -> instruction
Rule 15    instruction -> while
Rule 16    instruction -> if
Rule 17    instruction -> print
Rule 18    instruction -> skip
Rule 19    instruction -> program
Rule 20    instruction -> TkId TkAsig expression
Rule 21    instruction -> TkId TkAsig expressionlist
Rule 22    instruction -> TkId TkAsig functionMod
Rule 23    print -> TkPrint expression
Rule 24    print -> TkPrint string
Rule 25    skip -> TkSkip
Rule 26    while -> TkWhile expression TkArrow instructions TkEnd
Rule 27    if -> TkIf guardlist TkFi
Rule 28    guardlist -> guardlist TkGuard guard
Rule 29    guardlist -> guard
Rule 30    guard -> expression TkArrow instructions
Rule 31    expression -> expression TkPlus expression
Rule 32    expression -> expression TkMinus expression
Rule 33    expression -> expression TkMult expression
Rule 34    expression -> expression TkLeq expression
Rule 35    expression -> expression TkGeq expression
Rule 36    expression -> expression TkLess expression
Rule 37    expression -> expression TkGreater expression
Rule 38    expression -> expression TkEqual expression
Rule 39    expression -> expression TkNEqual expression
Rule 40    expression -> expression TkOr expression
Rule 41    expression -> expression TkAnd expression
Rule 42    expression -> TkNot expression
Rule 43    expression -> TkMinus expression
Rule 44    expression -> expression TkApp TkId
Rule 45    expression -> expression TkApp TkNum
Rule 46    expression -> TkId TkApp expression
Rule 47    expression -> functionMod TkApp expression
Rule 48    functionMod -> functionMod TkOpenPar twopoints TkClosePar
Rule 49    functionMod -> TkId TkOpenPar twopoints TkClosePar
Rule 50    twopoints -> expression TkTwoPoints expression
Rule 51    expression -> TkId
Rule 52    expression -> TkOpenPar expression TkClosePar
Rule 53    string -> TkString
Rule 54    string -> string TkPlus string
Rule 55    string -> expression TkPlus string
Rule 56    string -> string TkPlus expression
Rule 57    expression -> TkNum
Rule 58    expression -> TkTrue
Rule 59    expression -> TkFalse

Terminals, with rules where they appear

ERROR                : 
TkAnd                : 41
TkApp                : 44 45 46 47
TkArrow              : 26 30
TkAsig               : 20 21 22
TkBool               : 6
TkCBlock             : 1 2
TkCBracket           : 7
TkClosePar           : 48 49 52
TkComma              : 8 11 12
TkElse               : 
TkEnd                : 26
TkEqual              : 38
TkFalse              : 59
TkFi                 : 27
TkFunction           : 7
TkGeq                : 35
TkGreater            : 37
TkGuard              : 28
TkId                 : 10 20 21 22 44 46 49 51
TkIf                 : 27
TkInt                : 5
TkLeq                : 34
TkLess               : 36
TkMinus              : 32 43
TkMult               : 33
TkNEqual             : 39
TkNot                : 42
TkNum                : 7 45 57
TkOBlock             : 1 2
TkOBracket           : 7
TkOpenPar            : 48 49 52
TkOr                 : 40
TkPlus               : 31 54 55 56
TkPrint              : 23 24
TkSemicolon          : 1 3 13
TkSkip               : 25
TkSoForth            : 7
TkString             : 53
TkTrue               : 58
TkTwoPoints          : 50
TkWhile              : 26
error                : 

Nonterminals, with rules where they appear

declaration          : 3 4
declarations         : 1 3
expression           : 11 12 12 20 23 26 30 31 31 32 32 33 33 34 34 35 35 36 36 37 37 38 38 39 39 40 40 41 41 42 43 44 45 46 47 50 50 52 55 56
expressionlist       : 11 21
functionMod          : 22 47 48
guard                : 28 29
guardlist            : 27 28
id                   : 8 9
idlist               : 5 6 7 8
if                   : 16
instruction          : 13 14
instructions         : 1 2 13 26 30
print                : 17
program              : 19 0
skip                 : 18
string               : 24 54 54 55 56
twopoints            : 48 49
while                : 15

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . TkOBlock declarations TkSemicolon instructions TkCBlock
    (2) program -> . TkOBlock instructions TkCBlock

    TkOBlock        shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> TkOBlock . declarations TkSemicolon instructions TkCBlock
    (2) program -> TkOBlock . instructions TkCBlock
    (3) declarations -> . declarations TkSemicolon declaration
    (4) declarations -> . declaration
    (13) instructions -> . instructions TkSemicolon instruction
    (14) instructions -> . instruction
    (5) declaration -> . TkInt idlist
    (6) declaration -> . TkBool idlist
    (7) declaration -> . TkFunction TkOBracket TkSoForth TkNum TkCBracket idlist
    (15) instruction -> . while
    (16) instruction -> . if
    (17) instruction -> . print
    (18) instruction -> . skip
    (19) instruction -> . program
    (20) instruction -> . TkId TkAsig expression
    (21) instruction -> . TkId TkAsig expressionlist
    (22) instruction -> . TkId TkAsig functionMod
    (26) while -> . TkWhile expression TkArrow instructions TkEnd
    (27) if -> . TkIf guardlist TkFi
    (23) print -> . TkPrint expression
    (24) print -> . TkPrint string
    (25) skip -> . TkSkip
    (1) program -> . TkOBlock declarations TkSemicolon instructions TkCBlock
    (2) program -> . TkOBlock instructions TkCBlock

    TkInt           shift and go to state 7
    TkBool          shift and go to state 8
    TkFunction      shift and go to state 9
    TkId            shift and go to state 15
    TkWhile         shift and go to state 16
    TkIf            shift and go to state 17
    TkPrint         shift and go to state 18
    TkSkip          shift and go to state 19
    TkOBlock        shift and go to state 2

    declarations                   shift and go to state 3
    instructions                   shift and go to state 4
    declaration                    shift and go to state 5
    instruction                    shift and go to state 6
    while                          shift and go to state 10
    if                             shift and go to state 11
    print                          shift and go to state 12
    skip                           shift and go to state 13
    program                        shift and go to state 14

state 3

    (1) program -> TkOBlock declarations . TkSemicolon instructions TkCBlock
    (3) declarations -> declarations . TkSemicolon declaration

    TkSemicolon     shift and go to state 20


state 4

    (2) program -> TkOBlock instructions . TkCBlock
    (13) instructions -> instructions . TkSemicolon instruction

    TkCBlock        shift and go to state 21
    TkSemicolon     shift and go to state 22


state 5

    (4) declarations -> declaration .

    TkSemicolon     reduce using rule 4 (declarations -> declaration .)


state 6

    (14) instructions -> instruction .

    TkCBlock        reduce using rule 14 (instructions -> instruction .)
    TkSemicolon     reduce using rule 14 (instructions -> instruction .)
    TkEnd           reduce using rule 14 (instructions -> instruction .)
    TkFi            reduce using rule 14 (instructions -> instruction .)
    TkGuard         reduce using rule 14 (instructions -> instruction .)


state 7

    (5) declaration -> TkInt . idlist
    (8) idlist -> . idlist TkComma id
    (9) idlist -> . id
    (10) id -> . TkId

    TkId            shift and go to state 25

    idlist                         shift and go to state 23
    id                             shift and go to state 24

state 8

    (6) declaration -> TkBool . idlist
    (8) idlist -> . idlist TkComma id
    (9) idlist -> . id
    (10) id -> . TkId

    TkId            shift and go to state 25

    idlist                         shift and go to state 26
    id                             shift and go to state 24

state 9

    (7) declaration -> TkFunction . TkOBracket TkSoForth TkNum TkCBracket idlist

    TkOBracket      shift and go to state 27


state 10

    (15) instruction -> while .

    TkCBlock        reduce using rule 15 (instruction -> while .)
    TkSemicolon     reduce using rule 15 (instruction -> while .)
    TkEnd           reduce using rule 15 (instruction -> while .)
    TkFi            reduce using rule 15 (instruction -> while .)
    TkGuard         reduce using rule 15 (instruction -> while .)


state 11

    (16) instruction -> if .

    TkCBlock        reduce using rule 16 (instruction -> if .)
    TkSemicolon     reduce using rule 16 (instruction -> if .)
    TkEnd           reduce using rule 16 (instruction -> if .)
    TkFi            reduce using rule 16 (instruction -> if .)
    TkGuard         reduce using rule 16 (instruction -> if .)


state 12

    (17) instruction -> print .

    TkCBlock        reduce using rule 17 (instruction -> print .)
    TkSemicolon     reduce using rule 17 (instruction -> print .)
    TkEnd           reduce using rule 17 (instruction -> print .)
    TkFi            reduce using rule 17 (instruction -> print .)
    TkGuard         reduce using rule 17 (instruction -> print .)


state 13

    (18) instruction -> skip .

    TkCBlock        reduce using rule 18 (instruction -> skip .)
    TkSemicolon     reduce using rule 18 (instruction -> skip .)
    TkEnd           reduce using rule 18 (instruction -> skip .)
    TkFi            reduce using rule 18 (instruction -> skip .)
    TkGuard         reduce using rule 18 (instruction -> skip .)


state 14

    (19) instruction -> program .

    TkCBlock        reduce using rule 19 (instruction -> program .)
    TkSemicolon     reduce using rule 19 (instruction -> program .)
    TkEnd           reduce using rule 19 (instruction -> program .)
    TkFi            reduce using rule 19 (instruction -> program .)
    TkGuard         reduce using rule 19 (instruction -> program .)


state 15

    (20) instruction -> TkId . TkAsig expression
    (21) instruction -> TkId . TkAsig expressionlist
    (22) instruction -> TkId . TkAsig functionMod

    TkAsig          shift and go to state 28


state 16

    (26) while -> TkWhile . expression TkArrow instructions TkEnd
    (31) expression -> . expression TkPlus expression
    (32) expression -> . expression TkMinus expression
    (33) expression -> . expression TkMult expression
    (34) expression -> . expression TkLeq expression
    (35) expression -> . expression TkGeq expression
    (36) expression -> . expression TkLess expression
    (37) expression -> . expression TkGreater expression
    (38) expression -> . expression TkEqual expression
    (39) expression -> . expression TkNEqual expression
    (40) expression -> . expression TkOr expression
    (41) expression -> . expression TkAnd expression
    (42) expression -> . TkNot expression
    (43) expression -> . TkMinus expression
    (44) expression -> . expression TkApp TkId
    (45) expression -> . expression TkApp TkNum
    (46) expression -> . TkId TkApp expression
    (47) expression -> . functionMod TkApp expression
    (51) expression -> . TkId
    (52) expression -> . TkOpenPar expression TkClosePar
    (57) expression -> . TkNum
    (58) expression -> . TkTrue
    (59) expression -> . TkFalse
    (48) functionMod -> . functionMod TkOpenPar twopoints TkClosePar
    (49) functionMod -> . TkId TkOpenPar twopoints TkClosePar

    TkNot           shift and go to state 31
    TkMinus         shift and go to state 30
    TkId            shift and go to state 32
    TkOpenPar       shift and go to state 35
    TkNum           shift and go to state 33
    TkTrue          shift and go to state 36
    TkFalse         shift and go to state 37

    expression                     shift and go to state 29
    functionMod                    shift and go to state 34

state 17

    (27) if -> TkIf . guardlist TkFi
    (28) guardlist -> . guardlist TkGuard guard
    (29) guardlist -> . guard
    (30) guard -> . expression TkArrow instructions
    (31) expression -> . expression TkPlus expression
    (32) expression -> . expression TkMinus expression
    (33) expression -> . expression TkMult expression
    (34) expression -> . expression TkLeq expression
    (35) expression -> . expression TkGeq expression
    (36) expression -> . expression TkLess expression
    (37) expression -> . expression TkGreater expression
    (38) expression -> . expression TkEqual expression
    (39) expression -> . expression TkNEqual expression
    (40) expression -> . expression TkOr expression
    (41) expression -> . expression TkAnd expression
    (42) expression -> . TkNot expression
    (43) expression -> . TkMinus expression
    (44) expression -> . expression TkApp TkId
    (45) expression -> . expression TkApp TkNum
    (46) expression -> . TkId TkApp expression
    (47) expression -> . functionMod TkApp expression
    (51) expression -> . TkId
    (52) expression -> . TkOpenPar expression TkClosePar
    (57) expression -> . TkNum
    (58) expression -> . TkTrue
    (59) expression -> . TkFalse
    (48) functionMod -> . functionMod TkOpenPar twopoints TkClosePar
    (49) functionMod -> . TkId TkOpenPar twopoints TkClosePar

    TkNot           shift and go to state 31
    TkMinus         shift and go to state 30
    TkId            shift and go to state 32
    TkOpenPar       shift and go to state 35
    TkNum           shift and go to state 33
    TkTrue          shift and go to state 36
    TkFalse         shift and go to state 37

    guardlist                      shift and go to state 38
    guard                          shift and go to state 39
    expression                     shift and go to state 40
    functionMod                    shift and go to state 34

state 18

    (23) print -> TkPrint . expression
    (24) print -> TkPrint . string
    (31) expression -> . expression TkPlus expression
    (32) expression -> . expression TkMinus expression
    (33) expression -> . expression TkMult expression
    (34) expression -> . expression TkLeq expression
    (35) expression -> . expression TkGeq expression
    (36) expression -> . expression TkLess expression
    (37) expression -> . expression TkGreater expression
    (38) expression -> . expression TkEqual expression
    (39) expression -> . expression TkNEqual expression
    (40) expression -> . expression TkOr expression
    (41) expression -> . expression TkAnd expression
    (42) expression -> . TkNot expression
    (43) expression -> . TkMinus expression
    (44) expression -> . expression TkApp TkId
    (45) expression -> . expression TkApp TkNum
    (46) expression -> . TkId TkApp expression
    (47) expression -> . functionMod TkApp expression
    (51) expression -> . TkId
    (52) expression -> . TkOpenPar expression TkClosePar
    (57) expression -> . TkNum
    (58) expression -> . TkTrue
    (59) expression -> . TkFalse
    (53) string -> . TkString
    (54) string -> . string TkPlus string
    (55) string -> . expression TkPlus string
    (56) string -> . string TkPlus expression
    (48) functionMod -> . functionMod TkOpenPar twopoints TkClosePar
    (49) functionMod -> . TkId TkOpenPar twopoints TkClosePar

    TkNot           shift and go to state 31
    TkMinus         shift and go to state 30
    TkId            shift and go to state 32
    TkOpenPar       shift and go to state 35
    TkNum           shift and go to state 33
    TkTrue          shift and go to state 36
    TkFalse         shift and go to state 37
    TkString        shift and go to state 43

    expression                     shift and go to state 41
    string                         shift and go to state 42
    functionMod                    shift and go to state 34

state 19

    (25) skip -> TkSkip .

    TkCBlock        reduce using rule 25 (skip -> TkSkip .)
    TkSemicolon     reduce using rule 25 (skip -> TkSkip .)
    TkEnd           reduce using rule 25 (skip -> TkSkip .)
    TkFi            reduce using rule 25 (skip -> TkSkip .)
    TkGuard         reduce using rule 25 (skip -> TkSkip .)


state 20

    (1) program -> TkOBlock declarations TkSemicolon . instructions TkCBlock
    (3) declarations -> declarations TkSemicolon . declaration
    (13) instructions -> . instructions TkSemicolon instruction
    (14) instructions -> . instruction
    (5) declaration -> . TkInt idlist
    (6) declaration -> . TkBool idlist
    (7) declaration -> . TkFunction TkOBracket TkSoForth TkNum TkCBracket idlist
    (15) instruction -> . while
    (16) instruction -> . if
    (17) instruction -> . print
    (18) instruction -> . skip
    (19) instruction -> . program
    (20) instruction -> . TkId TkAsig expression
    (21) instruction -> . TkId TkAsig expressionlist
    (22) instruction -> . TkId TkAsig functionMod
    (26) while -> . TkWhile expression TkArrow instructions TkEnd
    (27) if -> . TkIf guardlist TkFi
    (23) print -> . TkPrint expression
    (24) print -> . TkPrint string
    (25) skip -> . TkSkip
    (1) program -> . TkOBlock declarations TkSemicolon instructions TkCBlock
    (2) program -> . TkOBlock instructions TkCBlock

    TkInt           shift and go to state 7
    TkBool          shift and go to state 8
    TkFunction      shift and go to state 9
    TkId            shift and go to state 15
    TkWhile         shift and go to state 16
    TkIf            shift and go to state 17
    TkPrint         shift and go to state 18
    TkSkip          shift and go to state 19
    TkOBlock        shift and go to state 2

    instructions                   shift and go to state 44
    declaration                    shift and go to state 45
    instruction                    shift and go to state 6
    while                          shift and go to state 10
    if                             shift and go to state 11
    print                          shift and go to state 12
    skip                           shift and go to state 13
    program                        shift and go to state 14

state 21

    (2) program -> TkOBlock instructions TkCBlock .

    $end            reduce using rule 2 (program -> TkOBlock instructions TkCBlock .)
    TkCBlock        reduce using rule 2 (program -> TkOBlock instructions TkCBlock .)
    TkSemicolon     reduce using rule 2 (program -> TkOBlock instructions TkCBlock .)
    TkEnd           reduce using rule 2 (program -> TkOBlock instructions TkCBlock .)
    TkFi            reduce using rule 2 (program -> TkOBlock instructions TkCBlock .)
    TkGuard         reduce using rule 2 (program -> TkOBlock instructions TkCBlock .)


state 22

    (13) instructions -> instructions TkSemicolon . instruction
    (15) instruction -> . while
    (16) instruction -> . if
    (17) instruction -> . print
    (18) instruction -> . skip
    (19) instruction -> . program
    (20) instruction -> . TkId TkAsig expression
    (21) instruction -> . TkId TkAsig expressionlist
    (22) instruction -> . TkId TkAsig functionMod
    (26) while -> . TkWhile expression TkArrow instructions TkEnd
    (27) if -> . TkIf guardlist TkFi
    (23) print -> . TkPrint expression
    (24) print -> . TkPrint string
    (25) skip -> . TkSkip
    (1) program -> . TkOBlock declarations TkSemicolon instructions TkCBlock
    (2) program -> . TkOBlock instructions TkCBlock

    TkId            shift and go to state 15
    TkWhile         shift and go to state 16
    TkIf            shift and go to state 17
    TkPrint         shift and go to state 18
    TkSkip          shift and go to state 19
    TkOBlock        shift and go to state 2

    instruction                    shift and go to state 46
    while                          shift and go to state 10
    if                             shift and go to state 11
    print                          shift and go to state 12
    skip                           shift and go to state 13
    program                        shift and go to state 14

state 23

    (5) declaration -> TkInt idlist .
    (8) idlist -> idlist . TkComma id

    TkSemicolon     reduce using rule 5 (declaration -> TkInt idlist .)
    TkComma         shift and go to state 47


state 24

    (9) idlist -> id .

    TkComma         reduce using rule 9 (idlist -> id .)
    TkSemicolon     reduce using rule 9 (idlist -> id .)


state 25

    (10) id -> TkId .

    TkComma         reduce using rule 10 (id -> TkId .)
    TkSemicolon     reduce using rule 10 (id -> TkId .)


state 26

    (6) declaration -> TkBool idlist .
    (8) idlist -> idlist . TkComma id

    TkSemicolon     reduce using rule 6 (declaration -> TkBool idlist .)
    TkComma         shift and go to state 47


state 27

    (7) declaration -> TkFunction TkOBracket . TkSoForth TkNum TkCBracket idlist

    TkSoForth       shift and go to state 48


state 28

    (20) instruction -> TkId TkAsig . expression
    (21) instruction -> TkId TkAsig . expressionlist
    (22) instruction -> TkId TkAsig . functionMod
    (31) expression -> . expression TkPlus expression
    (32) expression -> . expression TkMinus expression
    (33) expression -> . expression TkMult expression
    (34) expression -> . expression TkLeq expression
    (35) expression -> . expression TkGeq expression
    (36) expression -> . expression TkLess expression
    (37) expression -> . expression TkGreater expression
    (38) expression -> . expression TkEqual expression
    (39) expression -> . expression TkNEqual expression
    (40) expression -> . expression TkOr expression
    (41) expression -> . expression TkAnd expression
    (42) expression -> . TkNot expression
    (43) expression -> . TkMinus expression
    (44) expression -> . expression TkApp TkId
    (45) expression -> . expression TkApp TkNum
    (46) expression -> . TkId TkApp expression
    (47) expression -> . functionMod TkApp expression
    (51) expression -> . TkId
    (52) expression -> . TkOpenPar expression TkClosePar
    (57) expression -> . TkNum
    (58) expression -> . TkTrue
    (59) expression -> . TkFalse
    (11) expressionlist -> . expressionlist TkComma expression
    (12) expressionlist -> . expression TkComma expression
    (48) functionMod -> . functionMod TkOpenPar twopoints TkClosePar
    (49) functionMod -> . TkId TkOpenPar twopoints TkClosePar

    TkNot           shift and go to state 31
    TkMinus         shift and go to state 30
    TkId            shift and go to state 32
    TkOpenPar       shift and go to state 35
    TkNum           shift and go to state 33
    TkTrue          shift and go to state 36
    TkFalse         shift and go to state 37

    expression                     shift and go to state 49
    expressionlist                 shift and go to state 50
    functionMod                    shift and go to state 51

state 29

    (26) while -> TkWhile expression . TkArrow instructions TkEnd
    (31) expression -> expression . TkPlus expression
    (32) expression -> expression . TkMinus expression
    (33) expression -> expression . TkMult expression
    (34) expression -> expression . TkLeq expression
    (35) expression -> expression . TkGeq expression
    (36) expression -> expression . TkLess expression
    (37) expression -> expression . TkGreater expression
    (38) expression -> expression . TkEqual expression
    (39) expression -> expression . TkNEqual expression
    (40) expression -> expression . TkOr expression
    (41) expression -> expression . TkAnd expression
    (44) expression -> expression . TkApp TkId
    (45) expression -> expression . TkApp TkNum

    TkArrow         shift and go to state 52
    TkPlus          shift and go to state 53
    TkMinus         shift and go to state 54
    TkMult          shift and go to state 55
    TkLeq           shift and go to state 56
    TkGeq           shift and go to state 57
    TkLess          shift and go to state 58
    TkGreater       shift and go to state 59
    TkEqual         shift and go to state 60
    TkNEqual        shift and go to state 61
    TkOr            shift and go to state 62
    TkAnd           shift and go to state 63
    TkApp           shift and go to state 64


state 30

    (43) expression -> TkMinus . expression
    (31) expression -> . expression TkPlus expression
    (32) expression -> . expression TkMinus expression
    (33) expression -> . expression TkMult expression
    (34) expression -> . expression TkLeq expression
    (35) expression -> . expression TkGeq expression
    (36) expression -> . expression TkLess expression
    (37) expression -> . expression TkGreater expression
    (38) expression -> . expression TkEqual expression
    (39) expression -> . expression TkNEqual expression
    (40) expression -> . expression TkOr expression
    (41) expression -> . expression TkAnd expression
    (42) expression -> . TkNot expression
    (43) expression -> . TkMinus expression
    (44) expression -> . expression TkApp TkId
    (45) expression -> . expression TkApp TkNum
    (46) expression -> . TkId TkApp expression
    (47) expression -> . functionMod TkApp expression
    (51) expression -> . TkId
    (52) expression -> . TkOpenPar expression TkClosePar
    (57) expression -> . TkNum
    (58) expression -> . TkTrue
    (59) expression -> . TkFalse
    (48) functionMod -> . functionMod TkOpenPar twopoints TkClosePar
    (49) functionMod -> . TkId TkOpenPar twopoints TkClosePar

    TkNot           shift and go to state 31
    TkMinus         shift and go to state 30
    TkId            shift and go to state 32
    TkOpenPar       shift and go to state 35
    TkNum           shift and go to state 33
    TkTrue          shift and go to state 36
    TkFalse         shift and go to state 37

    expression                     shift and go to state 65
    functionMod                    shift and go to state 34

state 31

    (42) expression -> TkNot . expression
    (31) expression -> . expression TkPlus expression
    (32) expression -> . expression TkMinus expression
    (33) expression -> . expression TkMult expression
    (34) expression -> . expression TkLeq expression
    (35) expression -> . expression TkGeq expression
    (36) expression -> . expression TkLess expression
    (37) expression -> . expression TkGreater expression
    (38) expression -> . expression TkEqual expression
    (39) expression -> . expression TkNEqual expression
    (40) expression -> . expression TkOr expression
    (41) expression -> . expression TkAnd expression
    (42) expression -> . TkNot expression
    (43) expression -> . TkMinus expression
    (44) expression -> . expression TkApp TkId
    (45) expression -> . expression TkApp TkNum
    (46) expression -> . TkId TkApp expression
    (47) expression -> . functionMod TkApp expression
    (51) expression -> . TkId
    (52) expression -> . TkOpenPar expression TkClosePar
    (57) expression -> . TkNum
    (58) expression -> . TkTrue
    (59) expression -> . TkFalse
    (48) functionMod -> . functionMod TkOpenPar twopoints TkClosePar
    (49) functionMod -> . TkId TkOpenPar twopoints TkClosePar

    TkNot           shift and go to state 31
    TkMinus         shift and go to state 30
    TkId            shift and go to state 32
    TkOpenPar       shift and go to state 35
    TkNum           shift and go to state 33
    TkTrue          shift and go to state 36
    TkFalse         shift and go to state 37

    expression                     shift and go to state 66
    functionMod                    shift and go to state 34

state 32

    (46) expression -> TkId . TkApp expression
    (51) expression -> TkId .
    (49) functionMod -> TkId . TkOpenPar twopoints TkClosePar

  ! shift/reduce conflict for TkApp resolved as shift
    TkApp           shift and go to state 67
    TkArrow         reduce using rule 51 (expression -> TkId .)
    TkPlus          reduce using rule 51 (expression -> TkId .)
    TkMinus         reduce using rule 51 (expression -> TkId .)
    TkMult          reduce using rule 51 (expression -> TkId .)
    TkLeq           reduce using rule 51 (expression -> TkId .)
    TkGeq           reduce using rule 51 (expression -> TkId .)
    TkLess          reduce using rule 51 (expression -> TkId .)
    TkGreater       reduce using rule 51 (expression -> TkId .)
    TkEqual         reduce using rule 51 (expression -> TkId .)
    TkNEqual        reduce using rule 51 (expression -> TkId .)
    TkOr            reduce using rule 51 (expression -> TkId .)
    TkAnd           reduce using rule 51 (expression -> TkId .)
    TkCBlock        reduce using rule 51 (expression -> TkId .)
    TkSemicolon     reduce using rule 51 (expression -> TkId .)
    TkEnd           reduce using rule 51 (expression -> TkId .)
    TkFi            reduce using rule 51 (expression -> TkId .)
    TkGuard         reduce using rule 51 (expression -> TkId .)
    TkComma         reduce using rule 51 (expression -> TkId .)
    TkClosePar      reduce using rule 51 (expression -> TkId .)
    TkTwoPoints     reduce using rule 51 (expression -> TkId .)
    TkOpenPar       shift and go to state 68

  ! TkApp           [ reduce using rule 51 (expression -> TkId .) ]


state 33

    (57) expression -> TkNum .

    TkArrow         reduce using rule 57 (expression -> TkNum .)
    TkPlus          reduce using rule 57 (expression -> TkNum .)
    TkMinus         reduce using rule 57 (expression -> TkNum .)
    TkMult          reduce using rule 57 (expression -> TkNum .)
    TkLeq           reduce using rule 57 (expression -> TkNum .)
    TkGeq           reduce using rule 57 (expression -> TkNum .)
    TkLess          reduce using rule 57 (expression -> TkNum .)
    TkGreater       reduce using rule 57 (expression -> TkNum .)
    TkEqual         reduce using rule 57 (expression -> TkNum .)
    TkNEqual        reduce using rule 57 (expression -> TkNum .)
    TkOr            reduce using rule 57 (expression -> TkNum .)
    TkAnd           reduce using rule 57 (expression -> TkNum .)
    TkApp           reduce using rule 57 (expression -> TkNum .)
    TkCBlock        reduce using rule 57 (expression -> TkNum .)
    TkSemicolon     reduce using rule 57 (expression -> TkNum .)
    TkEnd           reduce using rule 57 (expression -> TkNum .)
    TkFi            reduce using rule 57 (expression -> TkNum .)
    TkGuard         reduce using rule 57 (expression -> TkNum .)
    TkComma         reduce using rule 57 (expression -> TkNum .)
    TkClosePar      reduce using rule 57 (expression -> TkNum .)
    TkTwoPoints     reduce using rule 57 (expression -> TkNum .)


state 34

    (47) expression -> functionMod . TkApp expression
    (48) functionMod -> functionMod . TkOpenPar twopoints TkClosePar

    TkApp           shift and go to state 69
    TkOpenPar       shift and go to state 70


state 35

    (52) expression -> TkOpenPar . expression TkClosePar
    (31) expression -> . expression TkPlus expression
    (32) expression -> . expression TkMinus expression
    (33) expression -> . expression TkMult expression
    (34) expression -> . expression TkLeq expression
    (35) expression -> . expression TkGeq expression
    (36) expression -> . expression TkLess expression
    (37) expression -> . expression TkGreater expression
    (38) expression -> . expression TkEqual expression
    (39) expression -> . expression TkNEqual expression
    (40) expression -> . expression TkOr expression
    (41) expression -> . expression TkAnd expression
    (42) expression -> . TkNot expression
    (43) expression -> . TkMinus expression
    (44) expression -> . expression TkApp TkId
    (45) expression -> . expression TkApp TkNum
    (46) expression -> . TkId TkApp expression
    (47) expression -> . functionMod TkApp expression
    (51) expression -> . TkId
    (52) expression -> . TkOpenPar expression TkClosePar
    (57) expression -> . TkNum
    (58) expression -> . TkTrue
    (59) expression -> . TkFalse
    (48) functionMod -> . functionMod TkOpenPar twopoints TkClosePar
    (49) functionMod -> . TkId TkOpenPar twopoints TkClosePar

    TkNot           shift and go to state 31
    TkMinus         shift and go to state 30
    TkId            shift and go to state 32
    TkOpenPar       shift and go to state 35
    TkNum           shift and go to state 33
    TkTrue          shift and go to state 36
    TkFalse         shift and go to state 37

    expression                     shift and go to state 71
    functionMod                    shift and go to state 34

state 36

    (58) expression -> TkTrue .

    TkArrow         reduce using rule 58 (expression -> TkTrue .)
    TkPlus          reduce using rule 58 (expression -> TkTrue .)
    TkMinus         reduce using rule 58 (expression -> TkTrue .)
    TkMult          reduce using rule 58 (expression -> TkTrue .)
    TkLeq           reduce using rule 58 (expression -> TkTrue .)
    TkGeq           reduce using rule 58 (expression -> TkTrue .)
    TkLess          reduce using rule 58 (expression -> TkTrue .)
    TkGreater       reduce using rule 58 (expression -> TkTrue .)
    TkEqual         reduce using rule 58 (expression -> TkTrue .)
    TkNEqual        reduce using rule 58 (expression -> TkTrue .)
    TkOr            reduce using rule 58 (expression -> TkTrue .)
    TkAnd           reduce using rule 58 (expression -> TkTrue .)
    TkApp           reduce using rule 58 (expression -> TkTrue .)
    TkCBlock        reduce using rule 58 (expression -> TkTrue .)
    TkSemicolon     reduce using rule 58 (expression -> TkTrue .)
    TkEnd           reduce using rule 58 (expression -> TkTrue .)
    TkFi            reduce using rule 58 (expression -> TkTrue .)
    TkGuard         reduce using rule 58 (expression -> TkTrue .)
    TkComma         reduce using rule 58 (expression -> TkTrue .)
    TkClosePar      reduce using rule 58 (expression -> TkTrue .)
    TkTwoPoints     reduce using rule 58 (expression -> TkTrue .)


state 37

    (59) expression -> TkFalse .

    TkArrow         reduce using rule 59 (expression -> TkFalse .)
    TkPlus          reduce using rule 59 (expression -> TkFalse .)
    TkMinus         reduce using rule 59 (expression -> TkFalse .)
    TkMult          reduce using rule 59 (expression -> TkFalse .)
    TkLeq           reduce using rule 59 (expression -> TkFalse .)
    TkGeq           reduce using rule 59 (expression -> TkFalse .)
    TkLess          reduce using rule 59 (expression -> TkFalse .)
    TkGreater       reduce using rule 59 (expression -> TkFalse .)
    TkEqual         reduce using rule 59 (expression -> TkFalse .)
    TkNEqual        reduce using rule 59 (expression -> TkFalse .)
    TkOr            reduce using rule 59 (expression -> TkFalse .)
    TkAnd           reduce using rule 59 (expression -> TkFalse .)
    TkApp           reduce using rule 59 (expression -> TkFalse .)
    TkCBlock        reduce using rule 59 (expression -> TkFalse .)
    TkSemicolon     reduce using rule 59 (expression -> TkFalse .)
    TkEnd           reduce using rule 59 (expression -> TkFalse .)
    TkFi            reduce using rule 59 (expression -> TkFalse .)
    TkGuard         reduce using rule 59 (expression -> TkFalse .)
    TkComma         reduce using rule 59 (expression -> TkFalse .)
    TkClosePar      reduce using rule 59 (expression -> TkFalse .)
    TkTwoPoints     reduce using rule 59 (expression -> TkFalse .)


state 38

    (27) if -> TkIf guardlist . TkFi
    (28) guardlist -> guardlist . TkGuard guard

    TkFi            shift and go to state 72
    TkGuard         shift and go to state 73


state 39

    (29) guardlist -> guard .

    TkFi            reduce using rule 29 (guardlist -> guard .)
    TkGuard         reduce using rule 29 (guardlist -> guard .)


state 40

    (30) guard -> expression . TkArrow instructions
    (31) expression -> expression . TkPlus expression
    (32) expression -> expression . TkMinus expression
    (33) expression -> expression . TkMult expression
    (34) expression -> expression . TkLeq expression
    (35) expression -> expression . TkGeq expression
    (36) expression -> expression . TkLess expression
    (37) expression -> expression . TkGreater expression
    (38) expression -> expression . TkEqual expression
    (39) expression -> expression . TkNEqual expression
    (40) expression -> expression . TkOr expression
    (41) expression -> expression . TkAnd expression
    (44) expression -> expression . TkApp TkId
    (45) expression -> expression . TkApp TkNum
